[gd_scene load_steps=6 format=2]

[ext_resource path="res://Weapons/SlotItemImage.tscn" type="PackedScene" id=1]
[ext_resource path="res://Weapons/PhysicalItem.gd" type="Script" id=2]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float width : hint_range(0.0, 30.0);
uniform vec4 outline_color : hint_color;

void fragment() {
	float size = width * 1.0 / float(textureSize(TEXTURE, 0).x);
	vec4 sprite_color = texture(TEXTURE, UV);
	float alpha = -4.0 * sprite_color.a;
	alpha += texture(TEXTURE, UV + vec2(size, 0.0)).a;
	alpha += texture(TEXTURE, UV + vec2(-size, 0.0)).a;
	alpha += texture(TEXTURE, UV + vec2(0.0, size)).a;
	alpha += texture(TEXTURE, UV + vec2(0.0, -size)).a;
	
	vec4 final_color = mix(sprite_color, outline_color, clamp(alpha, 0.0, 1.0));
	COLOR = vec4(final_color.rgb, clamp(abs(alpha) + sprite_color.a, 0.0, 1.0));
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/width = 1.0
shader_param/outline_color = Color( 0.854902, 0.854902, 0.854902, 1 )

[sub_resource type="RectangleShape2D" id=3]

[node name="PhysicalItem" type="Area2D"]
material = SubResource( 2 )
z_index = 1
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="SlotItemImage" parent="." instance=ExtResource( 1 )]
[connection signal="body_entered" from="." to="." method="_on_PhysicalItem_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_PhysicalItem_body_exited"]
